src/test/deca/context/valid/created/sans_objet/affectation_float_4.deca
// Description:
//    Programme minimaliste utilisant float.
//
// Resultats:
//  
//
// Historique:
//    cree le 13/01/2024

{
        float x;
        x=100;
}