src/test/deca/context/invalid/created/sans_objet/affectation_void_1.deca
// Description:
//    Programme minimaliste utilisant void.
//
// Resultats:
//      error: invalid assign
//
// Historique:
//    cree le 01/01/2024

{
        void x ;
       // x=1;
}